Comprehensive backend refactoring and architecture perfection (7-phase plan implemented)